--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h3></h3>              
  </div>
                                 <a class="btn btn-center" style="BORDER: rgb(234, 237, 237) 15px solid; FONT-SIZE: 15pt; FONT-FAMILY: Verdana; 
-                                BACKGROUND-COLOR: rgb(233,233,233)" href="https://drive.google.com/uc?export=download&id=1v19WkWKLPntLNx1a59U7uNnUf2FjCAIc">Channel List</a>
+                                BACKGROUND-COLOR: rgb(233,233,233)" href="">Channel List</a>
                                 
                         </div>
                         </div>
